--- a/styles/main.scss
+++ b/styles/main.scss
@@ -277,6 +277,10 @@ footer {
             }
         }
 
+        .address {
+            margin-bottom: 25px;
+        }
+
         .map iframe {
             width: 100%;
             height: 180px;
